--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
-    "@types/node": "^18.11.11",    
+    "@types/node": "^18.11.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.8.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prisma": "^4.8.0"
   }
 }
