--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.11",
@@ -18,8 +19,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.8.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^4.8.0"
+    "prisma": "^4.8.0",
+    "redis": "^4.5.1",
+    "zod": "^3.20.2"
   }
 }
